--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,6 +2,8 @@
 
 
 web-navbar {
+  display: block;
+
   .block-header-2 {
     background: $background;
     display: -ms-flexbox;
@@ -12,6 +14,7 @@ web-navbar {
     align-items: center;
     padding: 8px 32px;
     padding: 0.5rem 2rem;
+    border-bottom: 1px solid lightgray;
     
     position: fixed;
     width: 100%;
