--- a/src/views/web-loading/web-loading.scss
+++ b/src/views/web-loading/web-loading.scss
@@ -1,53 +1,62 @@
-@import '../../styles/colors.scss';
+@import "../../styles/colors.scss";
 
 web-loading {
-  .container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    .container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: white;
+        z-index: 130;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-    p {
-      align-self: center;
-      text-align: center;
+        .loading {
+            $colors: #7ef9ff, #89cff0, #4682b4, #0f52ba, #000080;
+            display: flex;
+
+            .dot {
+                position: relative;
+                width: 2em;
+                height: 2em;
+                margin: 0.8em;
+                border-radius: 50%;
+
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 100%;
+                    height: 100%;
+                    background: inherit;
+                    border-radius: inherit;
+                    animation: wave 2s ease-out infinite;
+                }
+
+                @for $i from 1 through 5 {
+                    &:nth-child(#{$i}) {
+                        background: nth($colors, $i);
+
+                        &::before {
+                            animation-delay: $i * 0.2s;
+                        }
+                    }
+                }
+            }
+        }
+
+        @keyframes wave {
+            50%,
+            75% {
+                transform: scale(2.5);
+            }
+
+            80%,
+            100% {
+                opacity: 0;
+            }
+        }
     }
-  }
-  .centered{
-    width:400px;
-    height:400px;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    background: $background;
-    filter: blur(10px) contrast(20);
-  }
-  .blob-1,.blob-2{
-    width:70px;
-    height:70px;
-    position:absolute;
-    background:rgb(0, 0, 0);
-    border-radius:50%;
-    top:50%;left:50%;
-    transform:translate(-50%,-50%);
-  }
-  .blob-1{
-    left:20%;
-    animation:osc-l 2.5s ease infinite;
-  }
-  .blob-2{
-    left:80%;
-    animation:osc-r 2.5s ease infinite;
-    background: $accent;
-  }
-  @keyframes osc-l{
-    0%{left:20%;}
-    50%{left:50%;}
-    100%{left:20%;}
-  }
-  @keyframes osc-r{
-    0%{left:80%;}
-    50%{left:50%;}
-    100%{left:80%;}
-  }
 }
