--- a/src/styles/elements/input.scss
+++ b/src/styles/elements/input.scss
@@ -5,7 +5,7 @@ input, .input {
   padding: 1rem 0.5rem;
   border: $border;
   background: $input-background;
-  border-radius: $border-radius;
+  // border-radius: $border-radius;
   font-size: 1em;
 }
 
