--- a/src/views/web-history/web-history.scss
+++ b/src/views/web-history/web-history.scss
@@ -1,8 +1,20 @@
 web-history {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+
     vaadin-grid {
-        --_lumo-grid-border-width: 0px;
+        --_lumo-grid-border-width: 1px;
         height: 100%;
         width: 100%;
+    }
+
+    #header {
+        border-bottom: 1px solid black;
     }
 
     @media only screen and (max-width: 600px) {
