--- a/src/views/web-home/web-home.scss
+++ b/src/views/web-home/web-home.scss
@@ -5,6 +5,7 @@ web-home {
     align-items: center;
     width: 100%;
     height: 100%;
+    padding: 20px;
     vaadin-button {
         height: 150px;
         width: 150px;
