--- a/src/views/web-profile/web-profile.scss
+++ b/src/views/web-profile/web-profile.scss
@@ -3,6 +3,8 @@ web-profile {
     padding: 20px;
     display: flex;
     flex-direction: column;
+    max-height: 100%;
+    overflow: scroll;
 
     // & * {
     //     margin: auto;
